--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "warc_parser"
 version = "0.0.1"
 authors = ["Stephen Becker IV <github@deathbyescalator.com>"]
 description = "Web ARChive parsing library using nom lib"
-documentation = ""
-homepage = ""
+documentation = "http://sbeckeriv.github.io/warc_nom_parser/warc_parser/index.html"
+homepage = "http://sbeckeriv.github.io/warc_nom_parser/warc_parser/index.html"
 repository = "https://github.com/sbeckeriv/warc_nom_parser"
 readme = "./README.md"
 keywords = ["web", "archive", "parsing", "warc"]
