Implement HyperLogLog and enable composition with Count–min sketch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "streaming_algorithms"
 version = "0.1.0"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
-categories = ["development-tools","encoding","rust-patterns","network-programming"]
-keywords = ["trait-object","serialization","serde","distributed"]
+categories = ["data-structures","algorithms","science"]
+keywords = ["streaming-algorithm","probabilistic","sketch","data-structure","hyperloglog"]
 description = """
-Performant implementations of various streaming algorithms.
+Performant implementations of various streaming algorithms, including Count–min sketch; Top k; HyperLogLog; Reservoir sampling.
 """
 repository = "https://github.com/alecmocatta/streaming_algorithms"
 homepage = "https://github.com/alecmocatta/streaming_algorithms"
@@ -26,3 +26,8 @@ twox-hash = "1.1"
 serde_derive = "1.0"
 serde = "1.0"
 rand = "0.5"
+bytecount = "0.3"
+
+[features]
+avx-accel = ["bytecount/avx-accel"]
+simd-accel = ["bytecount/simd-accel"]
