--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,16 @@ serde_derive = "1.0"
 serde = "1.0"
 rand = "0.5"
 bytecount = "0.3"
+# faster = { git = "https://github.com/alecmocatta/faster" } #"0.5"
+# faster = { path = "./faster" } #"0.5"
+packed_simd = { version = "0.3", features = ["into_bits"] }
 
 [features]
 avx-accel = ["bytecount/avx-accel"]
 simd-accel = ["bytecount/simd-accel"]
+
+# [replace]
+# "vektor:0.2.0" = { git = "https://github.com/alecmocatta/vektor" }
+
+[profile.release]
+debug = 2
