--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,8 +55,15 @@ futures = "*"
 chrono = "*"
 http = "*"
 walkdir = "2.2"
-parquet = { git = "https://github.com/alecmocatta/arrow", branch = "testing" }
-# parquet = { path = "./arrow/rust/parquet" }
+linked-hash-map = "0.5"
+fxhash = "0.2"
+csv = "1.0"
+serde_json = "1.0"
+postgres = { version = "0.15", features = ["with-chrono"] }
+postgres-binary-copy = "0.5"
+postgres-derive = "0.3"
+# parquet = { git = "https://github.com/alecmocatta/arrow" }
+parquet = { path = "../arrow/rust/parquet" }
 
 [dev-dependencies]
 select = "0.4"
@@ -82,4 +89,16 @@ harness = false
 
 [[test]]
 name = "parquet"
+harness = false
+
+[[test]]
+name = "csv"
+harness = false
+
+[[test]]
+name = "json"
+harness = false
+
+[[test]]
+name = "postgres"
 harness = false
