--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,11 +36,11 @@ serde = { version = "1.0", features = ["derive"] }
 rand = "0.5"
 either = "1.5"
 serde_closure = { version = "0.1" } #, path = "../serde_closure" }
-serde_traitobject = { version = "0.1.2" } #, path = "../serde_traitobject" }
+serde_traitobject = { version = "0.1.3" } #, path = "../serde_traitobject" }
 # constellation-rs = { version = "0.1", git = "https://github.com/alecmocatta/constellation.git" } #, path = "../constellation" }
 constellation-rs = { version = "0.1", path = "../deploy" }
 streaming_algorithms = { version = "0.1", git = "https://github.com/alecmocatta/streaming_algorithms" }#, path = "../streaming_algorithms" }
-sum = "0.1"
+sum = { version = "0.1", features = ["serde"] }
 replace_with = "0.1"
 reqwest = "0.8"
 reqwest_resume = "0.1"
@@ -59,6 +59,8 @@ linked-hash-map = "0.5"
 fxhash = "0.2"
 csv = "1.0"
 serde_json = "1.0"
+owned_chars = "0.3"
+crossbeam-channel = "0.3"
 postgres = { version = "0.15", features = ["with-chrono"] }
 postgres-binary-copy = "0.5"
 postgres-derive = "0.3"
