--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,36 @@
 # specific language governing permissions and limitations
 # under the License.
 
-[workspace]
-members = [
-        "arrow",
-        "parquet",
-        "datafusion",
-]
+[package]
+name = "parquet"
+version = "0.15.0-SNAPSHOT"
+license = "Apache-2.0"
+description = "Apache Parquet implementation in Rust"
+homepage = "https://github.com/apache/arrow"
+repository = "https://github.com/apache/arrow"
+authors = ["Apache Arrow <dev@arrow.apache.org>"]
+keywords = [ "arrow", "parquet", "hadoop" ]
+readme = "README.md"
+build = "build.rs"
+edition = "2018"
+
+[dependencies]
+parquet-format = "2.5.0"
+quick-error = "1.2.2"
+byteorder = "1"
+thrift = "0.0.4"
+snap = "0.2"
+brotli = "2.5"
+flate2 = "1.0.2"
+lz4 = "1.23"
+zstd = "0.4"
+chrono = "0.4"
+num-bigint = "0.2"
+sum = "0.1"
+arrow = { git = "https://github.com/apache/arrow", version = "0.15.0-SNAPSHOT" }
+linked-hash-map = "0.5"
+fxhash = "0.2"
+
+[dev-dependencies]
+lazy_static = "1"
+rand = "0.5"
