--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,9 @@ amadeus-serde = { version = "0.1.0", path = "amadeus-serde" }
 amadeus-core = { version = "0.1.0", path = "amadeus-core" }
 amadeus-aws = { version = "0.1.0", path = "amadeus-aws" }
 amadeus-commoncrawl = { version = "0.1.0", path = "amadeus-commoncrawl" }
-constellation-rs = "0.1"
-# constellation-rs = { version = "0.1", path = "../deploy" }
+constellation-rs = { version = "0.1", default-features = false }
 crossbeam-channel = "0.3"
+futures-preview = "=0.3.0-alpha.18"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = { version = "0.1" }
 serde_traitobject = { version = "0.1.6" }
