--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -14,9 +14,12 @@ edition = "2018"
 amadeus-core = { version = "0.1", path = "../amadeus-core" }
 chrono = "0.4"
 flate2 = "1.0"
+futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
 http = "0.1"
 rusoto_core = "0.40"
 rusoto_s3 = "0.40"
 serde_closure = { version = "0.1" } #, path = "../serde_closure" }
 serde = { version = "1.0", features = ["derive"] }
+tokio-io = "0.1.7"
+tokio = "0.1.7"
 url = { version = "2.1", features = ["serde"] }
