--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -18,8 +18,7 @@ futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
 http = "0.1"
 rusoto_core = "0.40"
 rusoto_s3 = "0.40"
-serde_closure = { version = "0.1" } #, path = "../serde_closure" }
+serde_closure = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-tokio-io = "0.1.7"
 tokio = "0.1.7"
 url = { version = "2.1", features = ["serde"] }
