--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -20,3 +20,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_closure = { version = "0.1" } #, path = "../serde_closure" }
 streaming_algorithms = { version = "0.1", git = "https://github.com/alecmocatta/streaming_algorithms" }#, path = "../streaming_algorithms" }
 sum = { version = "0.1", features = ["serde"] }
+walkdir = "2.2"
