--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -14,8 +14,10 @@ edition = "2018"
 amadeus-core = { version = "0.1", path = "../amadeus-core" }
 chrono = "0.4"
 flate2 = "1.0"
+futures-01 = { package = "futures", version = "0.1" }
 futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
 http = "0.1"
+once_cell = "1.0"
 rusoto_core = "0.40"
 rusoto_s3 = "0.40"
 serde_closure = "0.1"
