--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -31,4 +31,5 @@ rusoto_s3 = "0.40"
 serde_closure = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 tokio = "0.1.7"
+tokio-retry = "0.2"
 url = { version = "2.1", features = ["serde"] }
