--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "amadeus-aws"
-version = "0.1.1"
+version = "0.1.2"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
@@ -10,7 +10,7 @@ Harmonious distributed data analysis in Rust.
 """
 repository = "https://github.com/alecmocatta/amadeus"
 homepage = "https://github.com/alecmocatta/amadeus"
-documentation = "https://docs.rs/amadeus/0.1.1"
+documentation = "https://docs.rs/amadeus/0.1.2"
 readme = "README.md"
 edition = "2018"
 
@@ -19,7 +19,7 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-amadeus-core = { version = "0.1", path = "../amadeus-core" }
+amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
 chrono = "0.4"
 flate2 = "1.0"
 futures-01 = { package = "futures", version = "0.1" }
