--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ amadeus-postgres = { version = "=0.1.2", path = "amadeus-postgres", optional = t
 amadeus-serde = { version = "=0.1.2", path = "amadeus-serde", optional = true }
 constellation-rs = { version = "0.1", default-features = false, optional = true }
 futures-preview = "=0.3.0-alpha.18"
+pin-utils = "0.1.0-alpha.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.1"
 serde_traitobject = "0.1.6"
