--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -19,8 +19,10 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = { version = "0.5", features = ["serde"] }
 fxhash = "0.2"
 linked-hash-map = "0.5"
+once_cell = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
