--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -21,7 +21,7 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.2", path = "../amadeus-types" }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", default-features = false, features = ["serde"] }
 csv = "1.0"
 linked-hash-map = "0.5"
 serde = { version = "1.0", features = ["derive"] }
