--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -21,7 +21,7 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.2", path = "../amadeus-types" }
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false }
 flate2 = "1.0"
 futures-01 = { package = "futures", version = "0.1" }
 futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
