--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -25,5 +25,5 @@ serde = { version = "1.0", features = ["derive"] }
 postgres = { version = "0.15", features = ["with-chrono"] }
 serde_closure = "0.1"
 postgres-binary-copy = "0.5"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false }
 sum = "0.1"
