--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -19,7 +19,7 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", default-features = false, features = ["serde"] }
 chrono-tz = { version = "0.5", features = ["serde"] }
 fxhash = "0.2"
 linked-hash-map = "0.5"
