test i686 and musl

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
     endpoint: alecmocatta
     default:
       rust_toolchain: nightly
-      rust_lint_toolchain: nightly-2019-10-04
+      rust_lint_toolchain: nightly-2019-10-15
       rust_flags: ''
       rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
       rust_doc_features: 'constellation aws commoncrawl postgres csv json'
@@ -25,9 +25,18 @@ jobs:
       # windows:
       #   imageName: 'vs2017-win2016'
       #   rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc' # currently broken building crate-type=lib: x86_64-pc-windows-gnu i686-pc-windows-gnu
-      mac:
+      mac0:
         imageName: 'macos-10.13'
-        rust_target_run: 'x86_64-apple-darwin' # i686-apple-darwin'
-      linux:
+        rust_target_run: 'x86_64-apple-darwin'
+      mac1:
+        imageName: 'macos-10.13'
+        rust_target_run: 'i686-apple-darwin'
+      linux0:
         imageName: 'ubuntu-16.04'
-        rust_target_run: 'x86_64-unknown-linux-gnu' # i686-unknown-linux-gnu x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
+        rust_target_run: 'x86_64-unknown-linux-gnu'
+      linux1:
+        imageName: 'ubuntu-16.04'
+        rust_target_run: 'i686-unknown-linux-gnu'
+      linux2:
+        imageName: 'ubuntu-16.04'
+        rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
