--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -34,3 +34,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = "0.1.7"
 tokio-retry = "0.2"
 url = { version = "2.1", features = ["serde"] }
+
+# dependency of rusoto_core/hyper-tls/native-tls; ensure it's vendored to simplify cross-compilation
+openssl = { version = "0.10", features = ["vendored"] }
