--- a/amadeus-commoncrawl/Cargo.toml
+++ b/amadeus-commoncrawl/Cargo.toml
@@ -28,3 +28,6 @@ nom = "4.2.3"
 serde_closure = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
+
+# dependency of reqwest/native-tls; ensure it's vendored to simplify cross-compilation
+openssl = { version = "0.10", features = ["vendored"] }
