--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,9 +34,9 @@ jobs:
       linux0:
         imageName: 'ubuntu-16.04'
         rust_target_run: 'x86_64-unknown-linux-gnu'
-      linux1:
-        imageName: 'ubuntu-16.04'
-        rust_target_run: 'i686-unknown-linux-gnu'
+      # linux1:
+      #   imageName: 'ubuntu-16.04'
+      #   rust_target_run: 'i686-unknown-linux-gnu'
       linux2:
         imageName: 'ubuntu-16.04'
         rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
