--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
       rust_lint_toolchain: nightly-2019-10-15
       rust_flags: ''
       rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
-      rust_doc_features: 'constellation aws commoncrawl postgres csv json'
+      rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
       rust_target_check: ''
       rust_target_build: ''
       rust_target_run: ''
