--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -28,6 +28,7 @@ chrono = { version = "0.4", default-features = false, features = ["serde"] }
 csv = "1.0"
 linked-hash-map = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
 serde_closure = "0.2"
 serde_json = "1.0"
 sum = { version = "0.1", features = ["serde"] }
