--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -24,5 +24,6 @@ chrono-tz = { version = "0.5", features = ["serde"] }
 fxhash = "0.2"
 linked-hash-map = "0.5"
 once_cell = "1.0"
+ordered-float = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
