--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -27,7 +27,7 @@ amadeus-types = { version = "=0.1.4", path = "../amadeus-types" }
 chrono = { version = "0.4", default-features = false }
 flate2 = "1.0"
 futures-01 = { package = "futures", version = "0.1" }
-futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
+futures = { version = "0.3", features = ["compat"] }
 http = "0.2"
 once_cell = "1.0"
 rusoto_core = "0.42"
