CI build weekly

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,11 @@
 trigger: ["master"]
 pr: ["master"]
+schedules:
+  - cron: "0 1 * * 0"
+    displayName: "Sunday build"
+    branches:
+      include: ["master"]
+    always: true
 
 resources:
   repositories:
@@ -9,34 +15,34 @@ resources:
       endpoint: alecmocatta
 
 jobs:
-- template: rust.yml@templates
-  parameters:
-    endpoint: alecmocatta
-    default:
-      rust_toolchain: nightly
-      rust_lint_toolchain: nightly-2019-12-11
-      rust_flags: ''
-      rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
-      rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
-      rust_target_check: ''
-      rust_target_build: ''
-      rust_target_run: ''
-    matrix:
-      # windows:
-      #   imageName: 'vs2017-win2016'
-      #   rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc' # currently broken building crate-type=lib: x86_64-pc-windows-gnu i686-pc-windows-gnu
-      mac0:
-        imageName: 'macos-10.13'
-        rust_target_run: 'x86_64-apple-darwin'
-      mac1:
-        imageName: 'macos-10.13'
-        rust_target_run: 'i686-apple-darwin'
-      linux0:
-        imageName: 'ubuntu-16.04'
-        rust_target_run: 'x86_64-unknown-linux-gnu'
-      # linux1:
-      #   imageName: 'ubuntu-16.04'
-      #   rust_target_run: 'i686-unknown-linux-gnu'
-      linux2:
-        imageName: 'ubuntu-16.04'
-        rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
+  - template: rust.yml@templates
+    parameters:
+      endpoint: alecmocatta
+      default:
+        rust_toolchain: nightly
+        rust_lint_toolchain: nightly-2019-12-12
+        rust_flags: ''
+        rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
+        rust_target_check: ''
+        rust_target_build: ''
+        rust_target_run: ''
+      matrix:
+        # windows:
+        #   imageName: 'vs2017-win2016'
+        #   rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc' # currently broken building crate-type=lib: x86_64-pc-windows-gnu i686-pc-windows-gnu
+        mac0:
+          imageName: 'macos-10.13'
+          rust_target_run: 'x86_64-apple-darwin'
+        mac1:
+          imageName: 'macos-10.13'
+          rust_target_run: 'i686-apple-darwin'
+        linux0:
+          imageName: 'ubuntu-16.04'
+          rust_target_run: 'x86_64-unknown-linux-gnu'
+        # linux1:
+        #   imageName: 'ubuntu-16.04'
+        #   rust_target_run: 'i686-unknown-linux-gnu'
+        linux2:
+          imageName: 'ubuntu-16.04'
+          rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
