fix ci image names

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,17 +29,17 @@ jobs:
         rust_target_run: ''
       matrix:
         # windows:
-        #   imageName: 'vs2017-win2016'
+        #   imageName: 'windows-latest'
         #   rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc' # currently broken building crate-type=lib: x86_64-pc-windows-gnu i686-pc-windows-gnu
         mac0:
-          imageName: 'macos-10.13'
+          imageName: 'macos-latest'
           rust_target_run: 'x86_64-apple-darwin'
         linux0:
-          imageName: 'ubuntu-16.04'
+          imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-gnu'
         # linux1:
-        #   imageName: 'ubuntu-16.04'
+        #   imageName: 'ubuntu-latest'
         #   rust_target_run: 'i686-unknown-linux-gnu'
         linux2:
-          imageName: 'ubuntu-16.04'
+          imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
