--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -19,7 +19,7 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
 [features]
-doc = []
+doc = ["amadeus-core/doc"]
 
 [package.metadata.docs.rs]
 features = ["doc"]
@@ -27,9 +27,10 @@ features = ["doc"]
 [dependencies]
 amadeus-core = { version = "=0.1.7", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.7", path = "../amadeus-types" }
-serde = { version = "1.0", features = ["derive"] }
-postgres = { version = "0.15", features = ["with-chrono"] }
-serde_closure = "0.2"
-postgres-binary-copy = "0.5"
 chrono = { version = "0.4", default-features = false }
+futures = "0.3"
+postgres = { version = "0.15", features = ["with-chrono"] }
+postgres-binary-copy = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_closure = "0.2"
 sum = "0.1"
