--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -19,7 +19,7 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
 [features]
-doc = []
+doc = ["amadeus-core/doc"]
 
 [package.metadata.docs.rs]
 features = ["doc"]
@@ -29,6 +29,7 @@ amadeus-core = { version = "=0.1.7", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.7", path = "../amadeus-types" }
 chrono = { version = "0.4", default-features = false, features = ["serde"] }
 csv = "1.0"
+futures = "0.3"
 linked-hash-map = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
