--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,12 @@ amadeus-postgres = { version = "=0.1.7", path = "amadeus-postgres", optional = t
 amadeus-serde = { version = "=0.1.7", path = "amadeus-serde", optional = true }
 constellation-rs = { version = "0.1", default-features = false, optional = true }
 futures = "0.3"
+num_cpus = "1.13"
 pin-project = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.2"
 serde_traitobject = "0.2"
+tokio = { version = "0.2", features = ["rt-threaded", "rt-util"] }
 
 [dev-dependencies]
 either = { version = "1.5", features = ["serde"] }
