--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -27,18 +27,19 @@ features = ["doc"]
 [dependencies]
 amadeus-core = { version = "=0.1.7", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.7", path = "../amadeus-types" }
+async-compression = { version = "0.3.3", features = ["gzip", "futures-bufread"] }
+async-trait = "0.1"
 chrono = { version = "0.4", default-features = false }
-flate2 = "1.0"
-futures-01 = { package = "futures", version = "0.1" }
-futures = { version = "0.3", features = ["compat"] }
+futures = { version = "0.3" }
+futures-retry = "0.5"
 http = "0.2"
 once_cell = "1.0"
-rusoto_core = "0.42"
-rusoto_s3 = "0.42"
+rusoto_core = "0.44"
+rusoto_credential = "0.44"
+rusoto_s3 = "0.44"
 serde_closure = "0.2"
 serde = { version = "1.0", features = ["derive"] }
-tokio = "0.1.7"
-tokio-retry = "0.2"
+tokio = "0.2"
 url = { version = "2.1", features = ["serde"] }
 
 # dependency of rusoto_core/hyper-tls/native-tls; ensure it's vendored to simplify cross-compilation
