--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "streaming_algorithms"
-version = "0.1.1"
+version = "0.1.2"
 license = "MIT OR Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["data-structures","algorithms","science"]
@@ -10,12 +10,12 @@ SIMD-accelerated implementations of various streaming algorithms, including Coun
 """
 repository = "https://github.com/alecmocatta/streaming_algorithms"
 homepage = "https://github.com/alecmocatta/streaming_algorithms"
-documentation = "https://docs.rs/streaming_algorithms/0.1.1"
+documentation = "https://docs.rs/streaming_algorithms/0.1.2"
 readme = "README.md"
 edition = "2018"
 
 [badges]
-azure-devops = { project = "alecmocatta/streaming_algorithms", pipeline = "tests" }
+azure-devops = { project = "alecmocatta/streaming_algorithms", pipeline = "tests", build = "16" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
